service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-s3-clone-service-yonathan
spec:
  selector:
    app: my-s3-clone
  ports:
    - protocol: TCP
      port: 9595  
      targetPort: 9595  
  type: ClusterIP
