ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-s3-ingress
spec:
  rules:
  - host: yonathan.cdpi.atelier.ovh
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-s3-clone-service-yonathan
              port:
                number: 9595
